2005-05-19 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/bug1198642.c: new test
	* src/SDCCicode.c (isOperandEqual): fixed bug 1198642
	* src/SDCCcse.c (findPrevIc): added comment, please have a look
	* support/scripts/resource.h,
	* support/scripts/resource.rc,
	* src/src.dsp: added sdcc.ico to project as icon for sdcc.exe
	* support/scripts/sdcc.ico: added 32x32 icon

2005-05-18 Raphael Neider <rneider AT web.de>

	* device/lib/pic16/libdev/pic18f*.c,
	* device/include/pic16/pic18f*.h: updated "sfr" and "at X"
	  keywords to "__sfr" and "__at (X)"
	* device/include/pic16/pic18fregs.h: added pic18f4520
	* src/pic16/pcode.c (pic16_pCode2str): fixed (?) bug
	  #1203088 (MPLAB compatibility)

2005-05-17 Raphael Neider <rneider AT web.de>

	* device/include/pic18f{2550,4331,4455,4520}.h: NEW
	* device/lib/pic16/libdev/pic18f{2550,4331,4455,4520}.c: NEW
	* device/lib/pic16/pics.all: added new devices
	* src/pic16/device.c: added support for pic18f4520

2005-05-16 Raphael Neider <rneider AT web.de>
	* src/pic16/gen.{c,h}: s/mov2f/pic16_mov2f made public
	* src/pic16/genarith.c (genAddit): fixed bug 1202480
	* src/pic16/pcode.{c,h} (pic16_newpCodeOpBit_simple): NEW
	  convenience function for bit access

2005-05-15 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/printf_large.c: fixed bug 1193299
	* support/regression/tests/bug1057979.c: added test %3.3s

2005-05-15 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* device/include/mcs51/8051.h,
	* device/include/mcs51/8052.h: made parseable with lint
	* device/include/mcs51/lint.h: added include file for (sp)lint
	* doc/sdccman.lyx: added doc about use of splint (syntax checking tool)
	* doc/cdbfileformat.lyx,
	* doc/test_suite_spec.lyx: hardcoded date to the date of last text change

2005-05-14 Raphael Neider <rneider AT web.de>

	* device/lib/pic16/Makefile.common.in: add --optimize-df to OPT_FLAGS
	* device/lib/pic16/libc/stdlib/itoa.c (new)